fix: z-index on layout

--- a/src/layout/Layout/Layout.scss
+++ b/src/layout/Layout/Layout.scss
@@ -25,7 +25,6 @@
       padding: 20px;
       border-bottom: 2px solid $color-grey-dark;
       background-color: $theme-light;
-      z-index: $start-z;
 
       &__title {
         font-size: 22px;
