--- a/src/styles/variabless.scss
+++ b/src/styles/variabless.scss
@@ -11,4 +11,3 @@ $tablet: 772px;
 
 // z-index:
 $z-index-initial: 1;
-$start-z: 5;
